# toonpy

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-package-ci.yml
src/toonpy/: __init__.py  decoder.py  encoder.py
tests/: test_decoder.py  test_encoder.py
